Mon Jul 14 04:35:12 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvButton.cpp:
	  - The conversation button is now only enabled if there are any
	    active conversations.

Mon Jul 14 04:27:35 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountsWindow.cpp:
	* src/QGaimAccountsWindow.h:
	* src/QGaimConvWindow.cpp:
	* src/QGaimConvWindow.h:
	  - Added the conversations button to the accounts window.

Mon Jul 14 04:25:41 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBListWindow.cpp:
	* src/QGaimConvButton.cpp:
	* src/QGaimConvButton.h:
	* gaim.pro:
	  - Added a QGaimConvButton class, which handles all the conversation
	    button and menu mess.

Mon Jul 14 04:24:13 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	  - Added UI ops for conversation window show, hide, and raise.

Mon Jul 14 02:41:27 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	* src/QGaimConvWindow.h:
	* src/QGaimBListWindow.cpp:
	* src/QGaimBListWindow.h:
	  - Added a drop-down menu to the Conversations button on the buddy
	    list, which will be used for accessing other conversations not
	    in view.

Sun Jul 13 01:20:37 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* mkstuff.conf:
	  - Updated mkstuff.conf to be able to build CVS snapshots.

Sun Jul 13 01:03:48 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* data/images/delete.png:
	* data/images/new.png:
	* src/QGaimAccountsWindow.cpp:
	* src/QGaimAccountsWindow.h:
	* gaim.pro:
	  - Removed the menubar in the accounts window, and added
	    New Account and Delete Account buttons.

Sun Jul 13 00:44:42 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBListWindow.cpp:
	* src/QGaimBListWindow.h:
	  - Removed the menubar completely, and put a nice toolbar in its place.

Sat Jul 12 02:11:40 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* data/images/add.png:
	* data/images/info.png: